# shazam-malgache

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
admin/: .env.example  .gitignore  Dockerfile  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
admin/app/: globals.css  layout.tsx  page.tsx
admin/app/catalog/: page.tsx
admin/app/ingest/: page.tsx
admin/app/jobs/: page.tsx
admin/app/songs/: page.tsx
admin/components/: JobItem.tsx  Sidebar.tsx  ui.tsx
admin/lib/: api.ts  labels.ts  types.ts
scripts/: diag.py  seed_synthetic.py  test_ota.py  validate_real.py
shazam_malgache/: __init__.py  admin.py  api.py  audio_io.py  catalog.py  db.py  fingerprint.py  ingest.py  jobs.py  ota.py  synth.py
tests/: test_api.py  test_db.py  test_ingest.py  test_robustness.py  test_synthetic.py
web/: index.html
